<resources>
    <string name="app_name">ComImage</string>
    <string name="text_accounts">Les comptes</string>
    <string name="hint_name">Nom</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_confirm_password">Confirmez votre mot de passe</string>
    <string name="text_login">Login</string>
    <string name="btn_question_save">Enregistrer</string>
    <string name="text_register">S\'enregister</string>
    <string name="error_message_name">Nom complet</string>
    <string name="error_message_email">email valide</string>
    <string name="error_message_age">Entrez votre âge</string>
    <string name="error_message_password">Entrez votre mot de passe</string>
    <string name="enter_question">Saisissez votre question</string>
    <string name="success_message">Création de compte réussie</string>
    <string name="text_not_member">Aucun compte? Enregistrez-vous.</string>
    <string name="text_already_member">Déjà membre? Connectez-vous.</string>
    <string name="error_email_exist">L\'email existe déjà.</string>
    <string name="question_saved">Question enregistrée.</string>
    <string name="error_question_exist">La question existe déjà.</string>
    <string name="error_no_question">Veuillez saisir une question</string>
    <string name="error_password_match">Les mots de passe ne correspondent pas</string>
    <string name="error_valid_email_password">Mauvais email ou mot de passe</string>
    <string name="action_settings">Settings</string>
    <string name="show_questions">Voir les questions</string>
    <string name="deconnect">Se déconnecter</string>
    <string name="hint_id_question">Id Question</string>
    <string name="hint_question">Question</string>
    <string name="hint_iduser_question">Id User</string>
    <string name="delete_question">Effacer une question</string>
    <string name="text_hello">Bienvenue!</string>
    <string name="choisir_image">Choisir un pictogramme</string>
    <string name="text_list_questions">Listing de vos questions</string>
    <string name="text_title">ComImage</string>
    <string name="btn_creer_question">Créer une question</string>
    <string name="btn_gerer_question">Gérer les questions</string>
    <string name="btn_gerer_profil">Gérer votre profil</string>
    <string name="btn_valider">Valider</string>
    <string name="text_credits">Crédits</string>
    <string name="btn_annuler">Annuler</string>
    <string name="modify_question_question">La Question</string>
    <string name="btn_modifier">Modifier</string>
    <string name="btn_supprimer">Supprimer</string>
    <string name="btn_retour">Retour</string>
    <string name="txt_credits1">ComImage, \"La Communication par l\'Image\", est une application sœur destinée aux thérapeutes aidant les enfants autistes.</string>
    <string name="txt_credits2">Elle permet la gestion d\'un jeu de questions destiné à aider l\'enfant à communiquer avec son entourage.</string>
    <string name="txt_credits3">Créée par Stéphan D. Dejaegere pour l\'association Terre Plurielle, en partenariat avec l\'EPMI et EPEA.</string>
    <string name="txt_credits4">Remerciements à Mr Moncef Benkherrat, force motrice à la base du projet, à Mr Moustapha Younsi, pour sa guidance et cette opportunité, et à Dorra Soltani pour ce magnifique logo. </string>
    <string name="txt_choix_picto">Choisissez jusqu\'à 5 pictogrammes</string>
    <string name="txt_choix_categorie">Choisissez une catégorie</string>
    <string name="txt_choix_un_picto">Choisissez un pictogramme</string>
</resources>
