<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.ManageSingleQuestionActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewModifyQuestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/modify_question_question"
            android:textSize="24sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonModifierModifyQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/btn_modifier" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonSupprimerModifyQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/btn_supprimer" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonAnnulerModifyQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/btn_annuler" />


    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
