<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".activities.CreditsActivity">
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_gravity="center">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:src="@drawable/logo" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonAnnulerCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/btn_retour" />

    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/myLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="clip_horizontal|center"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text=""
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="clip_horizontal|center"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/txt_credits1"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="clip_horizontal|center"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/txt_credits2"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="clip_horizontal|center"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/txt_credits3"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="clip_horizontal|center"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/txt_credits4"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>