<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".activities.ChoixPictoActivity">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="clip_horizontal|center"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/txt_choix_categorie"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/spinnerCategorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonAnnulerChoixPicto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorTextHint"
                android:onClick="quit"
                android:text="@string/btn_annuler" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonValiderChoixPicto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/colorTextHint"
                android:onClick="onButtonClick"
                android:text="@string/btn_valider" />
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/myLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="clip_horizontal|center"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/txt_choix_un_picto"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/spinnerPicto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>