<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".activities.CreateQuestionActivity">
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_question"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAnnulerCreerQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/colorTextHint"
                android:text="@string/btn_annuler" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonSaveQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/colorTextHint"
                android:text="@string/btn_question_save" />
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/myLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">


            <TextView
                android:id="@+id/textViewFiller1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewChoixPicto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_choix_picto"/>

            <TextView
                android:id="@+id/textViewFiller2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/imageButtonChoixPictoUn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <TextView
                    android:id="@+id/textViewNomPictoUn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal|center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/imageButtonChoixPictoDeux"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <TextView
                    android:id="@+id/textViewNomPictoDeux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal|center_vertical" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/imageButtonChoixPictoTrois"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <TextView
                    android:id="@+id/textViewNomPictoTrois"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal|center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/imageButtonChoixPictoQuatre"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <TextView
                    android:id="@+id/textViewNomPictoQuatre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal|center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/imageButtonChoixPictoCinq"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <TextView
                    android:id="@+id/textViewNomPictoCinq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal|center_vertical" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>